[gd_scene load_steps=18 format=3 uid="uid://exdhmbr43ger"]

[ext_resource type="Script" uid="uid://dic75q4o378w6" path="res://UI/UI.gd" id="1_6dd3c"]
[ext_resource type="Theme" uid="uid://b3kq74llqlv3x" path="res://UI/Theme/MinimalUI.tres" id="1_dhe1o"]
[ext_resource type="PackedScene" uid="uid://bbiv7n10cddy3" path="res://UI/Hotkeys/hotkeys.tscn" id="3_qhxh2"]
[ext_resource type="PackedScene" uid="uid://ebs3x8yehb0t" path="res://UI/BuildMode/BuildMode.tscn" id="3_r2vy3"]
[ext_resource type="Script" uid="uid://b6jifj4bjajmg" path="res://UI/Killfeed/killfeed.gd" id="4_017wa"]
[ext_resource type="Texture2D" uid="uid://c8ipav7ruim5w" path="res://UI/HUD/Crosshair/crosshair2.png" id="4_f1fl4"]
[ext_resource type="Texture2D" uid="uid://btbey8ncomyx7" path="res://UI/HUD/Crosshair/hitmorker.png" id="5_jqf55"]
[ext_resource type="Script" uid="uid://bed3d7egj53pu" path="res://UI/PauseMenu/PauseMenu.gd" id="6_qhxh2"]
[ext_resource type="Script" uid="uid://bsyahvddt84hi" path="res://UI/delta_fade.gd" id="6_wtdy7"]
[ext_resource type="Script" uid="uid://cmqb4oi3mfhb4" path="res://UI/HUD/hud.gd" id="7_017wa"]
[ext_resource type="FontFile" uid="uid://dqa66k6g8kp0j" path="res://UI/Theme/C&C Red Alert [INET].ttf" id="8_nxoi0"]

[sub_resource type="Animation" id="Animation_017wa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_qhxh2"]
resource_name = "fade_destroy_border"
length = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.13333334),
"transitions": PackedFloat32Array(1, 0.066985935),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.13333334),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_npmjx"]
_data = {
&"RESET": SubResource("Animation_017wa"),
&"fade_destroy_border": SubResource("Animation_qhxh2")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r2vy3"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 25
border_width_top = 25
border_width_right = 25
border_width_bottom = 25
border_color = Color(0.99607843, 0.46666667, 0, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qhxh2"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_color = Color(1, 0.4666667, 0, 0.3647059)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rbg2s"]
bg_color = Color(0.18, 0.18, 0.18, 0.803922)

[node name="UI" type="Control"]
process_mode = 3
z_index = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_dhe1o")
script = ExtResource("1_6dd3c")

[node name="HUD" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("7_017wa")

[node name="Hotkeys" parent="HUD" instance=ExtResource("3_qhxh2")]
layout_mode = 1

[node name="BuildMode" parent="HUD" instance=ExtResource("3_r2vy3")]
visible = false
layout_mode = 1
anchors_preset = 12
anchor_left = 0.0
anchor_right = 1.0
offset_left = 0.0
offset_right = 0.0
offset_bottom = -0.3449707

[node name="DestroyMode" type="Control" parent="HUD" groups=["DestroyUI"]]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUD/DestroyMode"]
reset_on_save = false
libraries = {
&"": SubResource("AnimationLibrary_npmjx")
}

[node name="Panel" type="Panel" parent="HUD/DestroyMode"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_r2vy3")

[node name="Panel2" type="Panel" parent="HUD/DestroyMode"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 47.2
offset_top = 49.37
offset_right = 47.19995
offset_bottom = 49.369995
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.95, 0.9)
theme_override_styles/panel = SubResource("StyleBoxFlat_qhxh2")

[node name="Crosshairs" type="Control" parent="HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Crosshair" type="TextureRect" parent="HUD/Crosshairs"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.0
offset_top = -136.0
offset_right = 284.0
offset_bottom = 284.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.65, 0.65)
texture = ExtResource("4_f1fl4")

[node name="WhiteHitmarker" type="TextureRect" parent="HUD/Crosshairs/Crosshair"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -39.0
offset_right = 501.459
offset_bottom = 501.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.145, 0.145)
texture = ExtResource("5_jqf55")
expand_mode = 3

[node name="BlueHitmarker" type="TextureRect" parent="HUD/Crosshairs/Crosshair" groups=["WaterCrosshair"]]
visible = false
modulate = Color(0.0651, 0.454305, 0.93, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -39.0
offset_right = 501.459
offset_bottom = 501.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.145, 0.145)
texture = ExtResource("5_jqf55")
expand_mode = 3

[node name="YellowHitmarker" type="TextureRect" parent="HUD/Crosshairs/Crosshair" groups=["InteractCrosshair"]]
visible = false
modulate = Color(0.994023, 0.860147, 0.450501, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -39.0
offset_right = 501.459
offset_bottom = 501.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.145, 0.145)
texture = ExtResource("5_jqf55")
expand_mode = 3

[node name="Money" type="Control" parent="HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -258.65002
offset_top = 23.0
offset_right = -33.234985
offset_bottom = 97.0
grow_horizontal = 0

[node name="PanelContainer" type="PanelContainer" parent="HUD/Money"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/Money/PanelContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="HUD/Money/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HUD/Money/PanelContainer/HBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Money: "
vertical_alignment = 1

[node name="MoneyLabel" type="Label" parent="HUD/Money/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 20.0
theme_override_font_sizes/font_size = 52
text = "$15,000"
horizontal_alignment = 1

[node name="Control2" type="Control" parent="HUD/Money/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DeltaFade" type="Label" parent="HUD/Money"]
layout_mode = 0
offset_left = 49.0
offset_top = 118.0
offset_right = 193.0
offset_bottom = 187.0
theme_override_font_sizes/font_size = 50
text = "+1"
horizontal_alignment = 1
script = ExtResource("6_wtdy7")

[node name="Killfeed" type="Control" parent="HUD"]
layout_mode = 1
anchors_preset = 0
offset_left = 77.655
offset_top = 97.52
offset_right = 117.65499
offset_bottom = 137.51997
script = ExtResource("4_017wa")

[node name="Entries" type="VBoxContainer" parent="HUD/Killfeed"]
layout_mode = 1
anchors_preset = -1
anchor_left = -1.978
anchor_top = -2.539
anchor_right = -1.978
anchor_bottom = -2.539
offset_left = 44.46499
offset_top = 46.039948
offset_right = 84.46499
offset_bottom = 86.03995

[node name="HealthBar" type="Control" parent="HUD" groups=["HealthBar"]]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -338.0
offset_top = 66.33
offset_right = 343.99976
offset_bottom = 112.329994
grow_horizontal = 2

[node name="ProgressBar" type="ProgressBar" parent="HUD/HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 21.669998
offset_right = 2.0
offset_bottom = 21.669998
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
value = 1.0
show_percentage = false

[node name="Label" type="Label" parent="HUD/HealthBar"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 1.0
offset_top = -57.33
offset_right = 1.0
offset_bottom = 19.669998
grow_horizontal = 2
theme_override_font_sizes/font_size = 56
text = "KPI-o-meter"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BoxCounter" type="Control" parent="HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -417.0
offset_top = 114.935
offset_right = -31.0
offset_bottom = 195.93518
grow_horizontal = 0

[node name="PanelContainer" type="PanelContainer" parent="HUD/BoxCounter"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/BoxCounter/PanelContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="HUD/BoxCounter/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HUD/BoxCounter/PanelContainer/HBoxContainer" groups=["BoxCounter"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 20.0
theme_override_font_sizes/font_size = 52
text = "Boxes: 133/103"
horizontal_alignment = 1

[node name="Control2" type="Control" parent="HUD/BoxCounter/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PauseMenu" type="MarginContainer" parent="."]
process_mode = 3
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("6_qhxh2")

[node name="PanelContainer" type="PanelContainer" parent="PauseMenu"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rbg2s")

[node name="MarginContainer" type="MarginContainer" parent="PauseMenu/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="Rows" type="VBoxContainer" parent="PauseMenu/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Game Paused" type="Label" parent="PauseMenu/PanelContainer/MarginContainer/Rows"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_font_sizes/font_size = 58
text = "Game Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PauseMenu/PanelContainer/MarginContainer/Rows"]
custom_minimum_size = Vector2(0, 37.39)
layout_mode = 2

[node name="PauseDad" type="HBoxContainer" parent="PauseMenu/PanelContainer/MarginContainer/Rows"]
custom_minimum_size = Vector2(0, 843)
layout_mode = 2
theme_override_constants/separation = 80

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/PanelContainer/MarginContainer/Rows/PauseDad"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 75

[node name="Label" type="Label" parent="PauseMenu/PanelContainer/MarginContainer/Rows/PauseDad/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 51
text = "Settings"
horizontal_alignment = 1

[node name="Sensitivity" type="VBoxContainer" parent="PauseMenu/PanelContainer/MarginContainer/Rows/PauseDad/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PauseMenu/PanelContainer/MarginContainer/Rows/PauseDad/VBoxContainer/Sensitivity"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Look Sensitivity"
horizontal_alignment = 1

[node name="SensitivitySlider" type="HSlider" parent="PauseMenu/PanelContainer/MarginContainer/Rows/PauseDad/VBoxContainer/Sensitivity"]
layout_mode = 2
focus_neighbor_right = NodePath("../../../Profiles/ScrollContainer/GridContainer")
focus_neighbor_bottom = NodePath("../../FOV/FOVSlider")
min_value = 0.01
max_value = 10.0
step = 0.01
value = 3.0

[node name="FOV" type="VBoxContainer" parent="PauseMenu/PanelContainer/MarginContainer/Rows/PauseDad/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PauseMenu/PanelContainer/MarginContainer/Rows/PauseDad/VBoxContainer/FOV"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Field Of View"
horizontal_alignment = 1

[node name="FOVSlider" type="HSlider" parent="PauseMenu/PanelContainer/MarginContainer/Rows/PauseDad/VBoxContainer/FOV"]
layout_mode = 2
focus_neighbor_top = NodePath("../../Sensitivity/SensitivitySlider")
focus_neighbor_right = NodePath("../../../Profiles/ScrollContainer/GridContainer")
focus_neighbor_bottom = NodePath("../../Volume/VolumeSlider")
min_value = 60.0
max_value = 120.0
step = 0.01
value = 90.0

[node name="Volume" type="VBoxContainer" parent="PauseMenu/PanelContainer/MarginContainer/Rows/PauseDad/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PauseMenu/PanelContainer/MarginContainer/Rows/PauseDad/VBoxContainer/Volume"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Volume"
horizontal_alignment = 1

[node name="VolumeSlider" type="HSlider" parent="PauseMenu/PanelContainer/MarginContainer/Rows/PauseDad/VBoxContainer/Volume"]
layout_mode = 2
focus_neighbor_top = NodePath("../../FOV/FOVSlider")
focus_neighbor_right = NodePath("../../../Profiles/ScrollContainer/GridContainer")
focus_neighbor_bottom = NodePath("../../MusicVolume/MusicVolumeSlider")
max_value = 3.0
step = 0.01
value = 0.8

[node name="MusicVolume" type="VBoxContainer" parent="PauseMenu/PanelContainer/MarginContainer/Rows/PauseDad/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PauseMenu/PanelContainer/MarginContainer/Rows/PauseDad/VBoxContainer/MusicVolume"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Music Volume"
horizontal_alignment = 1

[node name="MusicVolumeSlider" type="HSlider" parent="PauseMenu/PanelContainer/MarginContainer/Rows/PauseDad/VBoxContainer/MusicVolume"]
layout_mode = 2
focus_neighbor_top = NodePath("../../Volume/VolumeSlider")
focus_neighbor_right = NodePath("../../../Profiles/ScrollContainer/GridContainer")
focus_neighbor_bottom = NodePath("../../SfxVolume/SfxVolumeSlider")
max_value = 1.0
step = 0.01
value = 0.8

[node name="SfxVolume" type="VBoxContainer" parent="PauseMenu/PanelContainer/MarginContainer/Rows/PauseDad/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PauseMenu/PanelContainer/MarginContainer/Rows/PauseDad/VBoxContainer/SfxVolume"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Sound Effect Volume"
horizontal_alignment = 1

[node name="SfxVolumeSlider" type="HSlider" parent="PauseMenu/PanelContainer/MarginContainer/Rows/PauseDad/VBoxContainer/SfxVolume"]
layout_mode = 2
focus_neighbor_top = NodePath("../../MusicVolume/MusicVolumeSlider")
focus_neighbor_right = NodePath("../../../Profiles/ScrollContainer/GridContainer")
focus_neighbor_bottom = NodePath("../../../../Close/Resume")
max_value = 1.0
step = 0.01
value = 0.8

[node name="Profiles" type="VBoxContainer" parent="PauseMenu/PanelContainer/MarginContainer/Rows/PauseDad"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.3

[node name="Label" type="Label" parent="PauseMenu/PanelContainer/MarginContainer/Rows/PauseDad/Profiles"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_font_sizes/font_size = 58
text = "Profiles"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="PauseMenu/PanelContainer/MarginContainer/Rows/PauseDad/Profiles"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true

[node name="GridContainer" type="HBoxContainer" parent="PauseMenu/PanelContainer/MarginContainer/Rows/PauseDad/Profiles/ScrollContainer" groups=["ProfileUI"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_neighbor_left = NodePath("../../../VBoxContainer/Sensitivity/SensitivitySlider")
focus_neighbor_bottom = NodePath("../../../../Close/Resume")
theme_override_constants/separation = 35

[node name="Tutorial" type="HBoxContainer" parent="PauseMenu/PanelContainer/MarginContainer/Rows"]
visible = false
custom_minimum_size = Vector2(0, 843)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 13.87

[node name="Control2" type="Control" parent="PauseMenu/PanelContainer/MarginContainer/Rows/Tutorial"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/PanelContainer/MarginContainer/Rows/Tutorial"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 6.57
theme_override_constants/separation = 25

[node name="Label" type="Label" parent="PauseMenu/PanelContainer/MarginContainer/Rows/Tutorial/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 66
text = "Mr. Money’s Phenomenally Soggy Water Removal Romp"
horizontal_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="PauseMenu/PanelContainer/MarginContainer/Rows/Tutorial/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "Welcome to Mr. Money’s Phenomenally Soggy Water Removal Romp, where you must [color=blue]drain an entire lake[/color] in search of riches.  Legends say there is [rainbow]ancient treasure[/rainbow] at the bottom of this lake, and you are far too buoyant to sink, so you are left with no choice but to [color=blue]simply remove all the water.[/color]"
fit_content = true
scroll_active = false

[node name="Label2" type="Label" parent="PauseMenu/PanelContainer/MarginContainer/Rows/Tutorial/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 66
text = "Tools"
horizontal_alignment = 1

[node name="RichTextLabel2" type="RichTextLabel" parent="PauseMenu/PanelContainer/MarginContainer/Rows/Tutorial/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "The most basic way to drain the lake is through the use of [color=green]tools[/color], which allow you to manually scoop up water and bring it do a [color=green]deposit tank[/color].  Depositing water there will earn you [color=blue]money![/color]"
fit_content = true
scroll_active = false

[node name="Label3" type="Label" parent="PauseMenu/PanelContainer/MarginContainer/Rows/Tutorial/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 66
text = "Pumps"
horizontal_alignment = 1

[node name="RichTextLabel3" type="RichTextLabel" parent="PauseMenu/PanelContainer/MarginContainer/Rows/Tutorial/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "Tired of carrying all that water around?  Time to build some [color=green]pumps![/color] You can build a pump at any patch of dirt.  [color=green]Pumps[/color] will automatically pump and sell water for you.  [color=green]Pumps[/color] can be [color=blue]upgraded[/color] after construction to improve their performance."
fit_content = true
scroll_active = false

[node name="Label4" type="Label" parent="PauseMenu/PanelContainer/MarginContainer/Rows/Tutorial/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 66
text = "Uncle Upgrade"
horizontal_alignment = 1

[node name="RichTextLabel4" type="RichTextLabel" parent="PauseMenu/PanelContainer/MarginContainer/Rows/Tutorial/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "[color=green]Uncle Upgrade's Tool Trove[/color] is your one stop shop for all things [color=green]tool[/color] related.  He's a bit of a weird dude and he will likely ask you to [color=blue]explore the map[/color] in order to find [color=blue]items to trade with.[/color]  Luckily, he usually gives pretty good tips about [color=blue]where to find valuable things.[/color]"
fit_content = true
scroll_active = false

[node name="Control" type="Control" parent="PauseMenu/PanelContainer/MarginContainer/Rows/Tutorial"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator4" type="HSeparator" parent="PauseMenu/PanelContainer/MarginContainer/Rows"]
custom_minimum_size = Vector2(0, 43.775)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.7

[node name="Close" type="HBoxContainer" parent="PauseMenu/PanelContainer/MarginContainer/Rows"]
layout_mode = 2
theme_override_constants/separation = 45

[node name="Control" type="Control" parent="PauseMenu/PanelContainer/MarginContainer/Rows/Close"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Resume" type="Button" parent="PauseMenu/PanelContainer/MarginContainer/Rows/Close"]
custom_minimum_size = Vector2(185.02, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
focus_neighbor_top = NodePath("../../PauseDad/VBoxContainer/SfxVolume/SfxVolumeSlider")
focus_neighbor_right = NodePath("../HowToPlay")
theme_override_fonts/font = ExtResource("8_nxoi0")
theme_override_font_sizes/font_size = 46
text = "Resume"

[node name="HowToPlay" type="Button" parent="PauseMenu/PanelContainer/MarginContainer/Rows/Close"]
custom_minimum_size = Vector2(276.035, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
focus_neighbor_left = NodePath("../Resume")
focus_neighbor_top = NodePath("../../PauseDad/Profiles/ScrollContainer/GridContainer")
focus_neighbor_right = NodePath("../Unstick")
theme_override_fonts/font = ExtResource("8_nxoi0")
theme_override_font_sizes/font_size = 46
text = "How To Play"

[node name="Unstick" type="Button" parent="PauseMenu/PanelContainer/MarginContainer/Rows/Close"]
custom_minimum_size = Vector2(296.455, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
focus_neighbor_left = NodePath("../HowToPlay")
focus_neighbor_top = NodePath("../../PauseDad/Profiles/ScrollContainer/GridContainer")
focus_neighbor_right = NodePath("../Quit")
theme_override_fonts/font = ExtResource("8_nxoi0")
theme_override_font_sizes/font_size = 46
text = "Help, I'm stuck!"

[node name="Quit" type="Button" parent="PauseMenu/PanelContainer/MarginContainer/Rows/Close"]
modulate = Color(1, 0.21, 0.21, 1)
custom_minimum_size = Vector2(310.835, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
focus_neighbor_left = NodePath("../Unstick")
focus_neighbor_top = NodePath("../../PauseDad/Profiles/ScrollContainer/GridContainer")
theme_override_fonts/font = ExtResource("8_nxoi0")
theme_override_font_sizes/font_size = 46
text = "Quit To Desktop
"

[node name="Control2" type="Control" parent="PauseMenu/PanelContainer/MarginContainer/Rows/Close"]
layout_mode = 2
size_flags_horizontal = 3

[node name="QuitConfirm" type="HBoxContainer" parent="PauseMenu/PanelContainer/MarginContainer/Rows"]
visible = false
layout_mode = 2
theme_override_constants/separation = 45

[node name="Control" type="Control" parent="PauseMenu/PanelContainer/MarginContainer/Rows/QuitConfirm"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="PauseMenu/PanelContainer/MarginContainer/Rows/QuitConfirm"]
layout_mode = 2
theme_override_font_sizes/font_size = 51
text = "Are you sure you want to quit the game?"

[node name="Nevermind" type="Button" parent="PauseMenu/PanelContainer/MarginContainer/Rows/QuitConfirm"]
custom_minimum_size = Vector2(296.455, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
focus_neighbor_right = NodePath("../Quit")
theme_override_fonts/font = ExtResource("8_nxoi0")
theme_override_font_sizes/font_size = 46
text = "Nevermind"

[node name="Quit" type="Button" parent="PauseMenu/PanelContainer/MarginContainer/Rows/QuitConfirm"]
modulate = Color(1, 0.21, 0.21, 1)
custom_minimum_size = Vector2(310.835, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
focus_neighbor_left = NodePath("../Nevermind")
theme_override_fonts/font = ExtResource("8_nxoi0")
theme_override_font_sizes/font_size = 46
text = "Quit To Desktop
"

[node name="Control2" type="Control" parent="PauseMenu/PanelContainer/MarginContainer/Rows/QuitConfirm"]
layout_mode = 2
size_flags_horizontal = 3
